exports[`Preview renders correctly with HTML snapshot 1`] = `
<div
  dataMockType="Frame"
  style={
    Object {
      "border": "none",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }>
    Frame
  </div>
  <style>
    body { color: green }
  </style>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Snapshot contents</div>",
      }
    } />
</div>
------------HTML PREVIEW---------------
<div
  dataMockType="Frame"
  style="border:none;width:100%;">
  <div
    style="color:blue;font-weight:bold;">
    Frame
  </div>
  <style>
    body { color: green }
  </style>
  <div>
  </div>
</div>
`;

exports[`Preview renders correctly with no snapshot 1`] = `
<div
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "transform": "translateZ(0)",
    }
  }>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontFamily": "sans-serif",
        "fontSize": "1.4em",
        "fontWeight": 100,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }>
    No snapshot selected
  </div>
</div>
------------HTML PREVIEW---------------
<div
  style="-webkit-flex:1;flex:1;transform:translateZ(0);">
  <div
    class="giu-large-message"
    style="color:#999999;font-family:sans-serif;font-size:1.4em;font-weight:100;padding:0.8em;text-align:center;">
    No snapshot selected
  </div>
</div>
`;

exports[`Preview renders correctly with non-HTML snapshot 1`] = `
<div
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "transform": "translateZ(0)",
    }
  }>
  <pre
    style={
      Object {
        "margin": 0,
        "padding": "0 1em",
      }
    }>
    Snapshot contents
  </pre>
</div>
------------HTML PREVIEW---------------
<div
  style="-webkit-flex:1;flex:1;transform:translateZ(0);">
  <pre
    style="margin:0;padding:0 1em;">
    Snapshot contents
  </pre>
</div>
`;
